[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
    "wheel",
    "Cython @ git+https://github.com/cython/cython.git@master",
]
build-backend = "setuptools.build_meta"

[project]
name = "adder"
requires-python = ">=3.8"
dynamic = ["version"]

[tool.setuptools_scm]

[tool.setuptools]
packages = ["adder"]
